[package]
name = "jolt"
version = "0.1.0"
edition = "2024"
description = "A library that provides JSON support"
repository = "https://github.com/ThLentzas/jolt"
keywords = ["json", "parser", "patch", "pointer", "path"]
categories = ["parser-implementations"]
license = "Apache-2.0 OR MIT"

[dependencies]
indexmap = "2.12.1"
bigdecimal = { version = "0.4.8", optional = true }
memchr = "2.7.6"

[features]
arbitrary_precision = ["bigdecimal"]